Related-bug: #1413919 Related-bug: #1413923
Issue: In "Configure > Security Groups" page, on clicking Address column,
dropdown popup is not aligned properly w.r.t drop-down and is positioned
a bit above the drop-down [when drop-down popup has no sufficient space
on bottom]

Instead of modifying select2 drop-down popup css from javascript, added
dropdownCss class for select2 and moved the css settings to
contrail.custom.css
Modified select2 to set the bottom instead of setting top in case of drop-down popup shown
above the drop-down. Setting top won't work in all cases especially if
drop-down height is not constant like having collapse/expand containers
within it.

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -2303,3 +2303,11 @@ color: #b94a48;
 .slick-grid-detail-sub-content-height{
     height : 290px !important;
 }
+
+.sgSelect2 .select2-result-sub {
+    max-height: 150px;
+    overflow: auto;
+}
+.sgSelect2 .select2-results {
+    max-height: 400px;
+}
